--- a/BanVeDiTourDuLich/Views/Home/About.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/About.cshtml
@@ -1,7 +1,216 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "About";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('/Content/images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
+            <div class="col-md-9 ftco-animate pb-5 text-center">
+                <h1 class="mb-3 bread">About Us</h1>
+                <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Trang chủ <i class="ion-ios-arrow-forward"></i></a></span> <span>Về chúng tôi <i class="ion-ios-arrow-forward"></i></span></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="ftco-section services-section bg-light">
+    <div class="container">
+        <div class="row d-flex">
+            <div class="col-md-6 order-md-last heading-section pl-md-5 ftco-animate">
+                <h2 class="mb-4">Đã đến lúc bắt đầu cuộc phưu lưu của bạn</h2>
+                <p>Bạn là người năng động, đam mê du lịch, yêu thích sự kết nối. Chỉ với chiếc smartphone đơn giản, bạn có thể tự tin kể với mọi người những câu chuyện thú vị bằng video clip về những cảnh đẹp, văn hóa, ẩm thực, lịch sử,... Vậy còn chần chờ gì nữa, cuộc thi “Thử tài làm Vlogger” chính là sân chơi hấp dẫn dành cho bạn.</p>
+
+                <p><a href="#" class="btn btn-primary py-3 px-4">Tìm điểm đến</a></p>
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+                        <div class="media block-6 services d-block">
+                            <div class="icon"><span class="flaticon-paragliding"></span></div>
+                            <div class="media-body">
+                                <h3 class="heading mb-3">Hoạt động</h3>
+                                <p>
+                                    Qua hệ thống Internet,
+                                    thông tin về du lịch bằng nhiều hình thức khác nhau trên mạng Internet và mạng xã hội
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+                        <div class="media block-6 services d-block">
+                            <div class="icon"><span class="flaticon-route"></span></div>
+                            <div class="media-body">
+                                <h3 class="heading mb-3">Chuẩn bị cho chuyến đi</h3>
+                                <p>
+                                    Tuỳ thuộc vào điều kiện thời tiết,
+                                    chương trình này du khách sẽ có cơ hội được nhìn thấy một số loài động vật hoang dã
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+                        <div class="media block-6 services d-block">
+                            <div class="icon">
+                                <span class="flaticon-tour-guide"></span>
+                            </div>
+                            <div class="media-body">
+                                <h3 class="heading mb-3">Hướng dẫn viên riêng</h3>
+                                <p>
+                                    Việt Nam - Đất nước con người qua góc nhìn báo chí”
+                                    kết hợp với các hoạt động tuyên truyền
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+                        <div class="media block-6 services d-block">
+                            <div class="icon"><span class="flaticon-map"></span></div>
+                            <div class="media-body">
+                                <h3 class="heading mb-3">Quản lý điểm đi cho bạn</h3>
+                                <p>
+                                    Thông tin Du lịch.
+                                    Du khách có thể nắm bắt thêm được nhiều thông tin hữu ích về du lịch.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="ftco-counter img" id="section-counter">
+    <div class="container">
+        <div class="row d-flex">
+            <div class="col-md-6 d-flex">
+                <div class="img d-flex align-self-stretch" style="background-image:url('/Content/images/about.jpg');"></div>
+            </div>
+            <div class="col-md-6 pl-md-5 py-5">
+                <div class="row justify-content-start pb-3">
+                    <div class="col-md-12 heading-section ftco-animate">
+                        <h2 class="mb-4">Khiến chuyến đi của bạn thú vị và an toàn với chúng tôi</h2>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
+                        <div class="block-18 text-center mb-4">
+                            <div class="text">
+                                <strong class="number" data-number="300">0</strong>
+                                <span>Successful Tours</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
+                        <div class="block-18 text-center mb-4">
+                            <div class="text">
+                                <strong class="number" data-number="24000">0</strong>
+                                <span>Happy Tourist</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 justify-content-center counter-wrap ftco-animate">
+                        <div class="block-18 text-center mb-4">
+                            <div class="text">
+                                <strong class="number" data-number="200">0</strong>
+                                <span>Place Explored</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="ftco-section testimony-section bg-bottom" style="background-image: url('/Content/images/bg_3.jpg');">
+    <div class="container">
+        <div class="row justify-content-center pb-4">
+            <div class="col-md-7 text-center heading-section ftco-animate">
+                <h2 class="mb-4">Phản hồi về chuyến đi</h2>
+            </div>
+        </div>
+        <div class="row ftco-animate">
+            <div class="col-md-12">
+                <div class="carousel-testimony owl-carousel ftco-owl">
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text">
+                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url('/Content/images/person_1.jpg')"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Roger Scott</p>
+                                        <span class="position">Marketing Manager</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text">
+                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url('/Content/images/person_2.jpg')"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Roger Scott</p>
+                                        <span class="position">Marketing Manager</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text">
+                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url('/Content/images/person_3.jpg')"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Roger Scott</p>
+                                        <span class="position">Marketing Manager</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text">
+                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url('/Content/images/person_1.jpg')"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Roger Scott</p>
+                                        <span class="position">Marketing Manager</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text">
+                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url('/Content/images/person_2.jpg')"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Roger Scott</p>
+                                        <span class="position">Marketing Manager</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
