--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -258,54 +258,21 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 ftco-animate">
-                <div class="project-destination">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/place-1.jpg)">
-                        <div class="text">
-                            <h3>@Model[0].TenDiaDiem</h3>
-                            <span>8 Chuyến đi</span>
-                        </div>
-                    </a>
+            @foreach (var destination in @Model)
+            {
+                <div class="col-md-3 ftco-animate">
+                    <div class="project-destination">
+                        <a href="#"
+                           class="img"
+                           style="background-image: url(@destination.DuongDanAnh)">
+                            <div class="text">
+                                <h3>@destination.TenDiaDiem</h3>
+                                <span>8 Chuyến đi</span>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-3 ftco-animate">
-                <div class="project-destination">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/place-2.jpg)">
-                        <div class="text">
-                            <h3>Canada</h3>
-                            <span>2 Chuyến đi</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 ftco-animate">
-                <div class="project-destination">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/place-3.jpg)">
-                        <div class="text">
-                            <h3>Thailand</h3>
-                            <span>5 Chuyến đi</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3 ftco-animate">
-                <div class="project-destination">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/place-4.jpg)">
-                        <div class="text">
-                            <h3>Autralia</h3>
-                            <span>5 Chuyến đi</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </section>
