--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DiaDiem>
+﻿@model BanVeDiTourDuLich.ViewModels.IndexViewModel
 @{
     ViewBag.Title = "Vacation";
 }
@@ -258,16 +258,16 @@
             </div>
         </div>
         <div class="row">
-            @foreach (var destination in @Model)
+            @foreach (var destination in @Model.CacDiaDiemBinhChon)
             {
                 <div class="col-md-3 ftco-animate">
                     <div class="project-destination">
                         <a href="#"
                            class="img"
-                           style="background-image: url(@destination.DuongDanAnh)">
+                           style="background-image: url(@destination.DiaDiem.DuongDanAnh)">
                             <div class="text">
-                                <h3>@destination.TenDiaDiem</h3>
-                                <span>8 Chuyến đi</span>
+                                <h3>@destination.DiaDiem.TenDiaDiem</h3>
+                                <span>@destination.SoChuyen Chuyến đi</span>
                             </div>
                         </a>
                     </div>
@@ -285,127 +285,29 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 ftco-animate">
-                <div class="project-wrap">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/destination-1.jpg)"></a>
-                    <div class="text p-4">
-                        <span class="price">$300/người</span>
-                        <span class="days">Chuyến đi 8 ngày</span>
-                        <h3><a href="#">Bali, Indonesia</a></h3>
-                        <p class="location">
-                            <span class="ion-ios-map"></span> Bali, Indonesia
-                        </p>
-                        <ul>
-                            <li><span class="flaticon-shower"></span>2</li>
-                            <li><span class="flaticon-king-size"></span>3</li>
-                            <li><span class="flaticon-mountains"></span>Gần núi</li>
-                        </ul>
+            @foreach (var destination in @Model.CacDiaDiem)
+            {
+                <div class="col-md-4 ftco-animate">
+                    <div class="project-wrap">
+                        <a href="#"
+                           class="img"
+                           style="background-image: url(@destination.DiaDiem.DuongDanAnh)"></a>
+                        <div class="text p-4">
+                            <span class="price">@destination.GiaTien/người</span>
+                            <span class="days">Chuyến đi 1 ngày</span>
+                            <h3><a href="#">@destination.DiaDiem.TenDiaDiem</a></h3>
+                            <p class="location">
+                                <span class="ion-ios-map"></span> @destination.DiaDiem.DiaChi
+                            </p>
+                            <ul>
+                                <li><span class="flaticon-shower"></span>2</li>
+                                <li><span class="flaticon-king-size"></span>3</li>
+                                <li><span class="flaticon-mountains"></span>Gần núi</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="project-wrap">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/destination-2.jpg)"></a>
-                    <div class="text p-4">
-                        <span class="price">$300/người</span>
-                        <span class="days">Chuyến đi 10 ngày</span>
-                        <h3><a href="#">Bali, Indonesia</a></h3>
-                        <p class="location">
-                            <span class="ion-ios-map"></span> Bali, Indonesia
-                        </p>
-                        <ul>
-                            <li><span class="flaticon-shower"></span>2</li>
-                            <li><span class="flaticon-king-size"></span>3</li>
-                            <li><span class="flaticon-sun-umbrella"></span>Gần biển</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="project-wrap">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/destination-3.jpg)"></a>
-                    <div class="text p-4">
-                        <span class="price">$300/person</span>
-                        <span class="days">Chuyến đi 7 ngày</span>
-                        <h3><a href="#">Bali, Indonesia</a></h3>
-                        <p class="location">
-                            <span class="ion-ios-map"></span> Bali, Indonesia
-                        </p>
-                        <ul>
-                            <li><span class="flaticon-shower"></span>2</li>
-                            <li><span class="flaticon-king-size"></span>3</li>
-                            <li><span class="flaticon-sun-umbrella"></span>Gần biển</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 ftco-animate">
-                <div class="project-wrap">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/destination-4.jpg)"></a>
-                    <div class="text p-4">
-                        <span class="price">$300/người</span>
-                        <span class="days">Chuyến đi 8 ngày</span>
-                        <h3><a href="#">Bali, Indonesia</a></h3>
-                        <p class="location">
-                            <span class="ion-ios-map"></span> Bali, Indonesia
-                        </p>
-                        <ul>
-                            <li><span class="flaticon-shower"></span>2</li>
-                            <li><span class="flaticon-king-size"></span>3</li>
-                            <li><span class="flaticon-sun-umbrella"></span>Gần biển</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="project-wrap">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/destination-5.jpg)"></a>
-                    <div class="text p-4">
-                        <span class="price">$300/người</span>
-                        <span class="days">Chuyến đi 10 ngày</span>
-                        <h3><a href="#">Bali, Indonesia</a></h3>
-                        <p class="location">
-                            <span class="ion-ios-map"></span> Bali, Indonesia
-                        </p>
-                        <ul>
-                            <li><span class="flaticon-shower"></span>2</li>
-                            <li><span class="flaticon-king-size"></span>3</li>
-                            <li><span class="flaticon-sun-umbrella"></span>Gần biển</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="project-wrap">
-                    <a href="#"
-                       class="img"
-                       style="background-image: url(../../Content/images/destination-6.jpg)"></a>
-                    <div class="text p-4">
-                        <span class="price">$300/người</span>
-                        <span class="days">Chuyến đi 7 ngày</span>
-                        <h3><a href="#">Bali, Indonesia</a></h3>
-                        <p class="location">
-                            <span class="ion-ios-map"></span> Bali, Indonesia
-                        </p>
-                        <ul>
-                            <li><span class="flaticon-shower"></span>2</li>
-                            <li><span class="flaticon-king-size"></span>3</li>
-                            <li><span class="flaticon-sun-umbrella"></span>Gần biển</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </section>
