--- a/BanVeDiTourDuLich/Views/Shared/_Layout.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     <a href="/home/contact" class="nav-link">Liên hệ</a>
                 </li>
                 <li class="nav-item cta">
-                    <a href="" class="nav-link">Đăng nhập</a>
+                    <a href="/user/index" class="nav-link">Đăng nhập</a>
                 </li>
             </ul>
         </div>
