--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -214,15 +214,15 @@
                     <!-- Add icons to the links using the .nav-icon class
                     with font-awesome or any other icon font library -->
                     <li class="nav-item">
-                        <a href="./index.html" class="nav-link active">
+                        <a id="#TongQuanLink" href="/admin/index" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>Tổng quan</p>
                         </a>
                     </li>
 
                     <!-- Quản lý đặt vé -->
-                    <li class="nav-item">
-                        <a href="./pages/examples/tickets.html" class="nav-link">
+                    <li  class="nav-item">
+                        <a id="#QuanLyVeLink" href="/admin/QuanLyBanVe" class="nav-link">
                             <i class="nav-icon fas fa-ticket-alt"></i>
                             <p>Quản lý bán vé</p>
                         </a>
@@ -231,7 +231,7 @@
                     <!-- /. Quản lý đặt vé -->
                     <!-- Quản lý người dùng -->
                     <li class="nav-item">
-                        <a href="./pages/examples/projects.html" class="nav-link">
+                        <a id="#QuanLyNguoiDungLink" href="/admin/quanlynguoidung" class="nav-link">
                             <i class="nav-icon fas fas fa-users"></i>
                             <p>Quản lý người dùng</p>
                         </a>
@@ -283,6 +283,7 @@
     <!-- AdminLTE for demo purposes -->
     <script src="/Content/dist/js/demo.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="/Content/dist/js/pages/dashboard.js"></script>
+<script src="/Content/dist/js/pages/dashboard.js"></script>
+<script src="/Content/dist/js/AdminScript.js"></script>
 </body>
 </html>
