--- a/BanVeDiTourDuLich/Views/Home/About.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/About.cshtml
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
             <div class="col-md-9 ftco-animate pb-5 text-center">
-                <h1 class="mb-3 bread">About Us</h1>
+                <h1 class="mb-3 bread">Về Chúng Tôi</h1>
                 <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Trang chủ <i class="ion-ios-arrow-forward"></i></a></span> <span>Về chúng tôi <i class="ion-ios-arrow-forward"></i></span></p>
             </div>
         </div>
