--- a/BanVeDiTourDuLich/Views/User/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/User/Index.cshtml
@@ -33,7 +33,7 @@
 
                 <form action="/User/Index/" method="post">
                     <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email" name="TaiKhoanDangNhap"/>
+                        <input type="text" class="form-control" placeholder="Email" name="TaiKhoanDangNhap"/>
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
