--- a/BanVeDiTourDuLich/Views/User/Register.cshtml
+++ b/BanVeDiTourDuLich/Views/User/Register.cshtml
@@ -2,12 +2,13 @@
 @{
     Layout = null;
 }
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AdminLTE 3 | Log in</title>
+    <title>AdminLTE 3 | Registration Page</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet"
@@ -21,17 +22,25 @@
     <!-- Theme style -->
     <link rel="stylesheet" href="/Content/plugins/dist/css/adminlte.min.css" />
 </head>
-<body class="hold-transition login-page">
-    <div class="login-box">
-        <div class="login-logo">
-            <a href="../../index2.html"><b>Vacation</b></a>
+<body class="hold-transition register-page">
+    <div class="register-box">
+        <div class="register-logo">
+            <a href="../../index2.html"><b>Vacation</b>LTE</a>
         </div>
-        <!-- /.login-logo -->
-        <div class="card">
-            <div class="card-body login-card-body">
-                <p class="login-box-msg">Đăng nhập để tiếp tục</p>
 
-                <form action="/User/Index/" method="post">
+        <div class="card">
+            <div class="card-body register-card-body">
+                <p class="login-box-msg">Đăng kí tài khoản</p>
+
+                <form action="/User/Register" method="post">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Tên" name="MaTaiKhoan" />
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <span class="fas fa-user"></span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Email" name="TaiKhoanDangNhap"/>
                         <div class="input-group-append">
@@ -43,52 +52,54 @@
                     <div class="input-group mb-3">
                         <input type="password"
                                class="form-control"
-                               placeholder="Mật khẩu" name="password"/>
+                               placeholder="Mật khẩu" 
+                               name="MatKhau" />
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="icheck-primary">
-                                <input type="checkbox" id="remember" />
-                                <label for="remember"> Nhớ tài khoản </label>
+                    <div class="input-group mb-3">
+                        <input type="password"
+                               class="form-control"
+                               placeholder="Nhập lại mật khẩu" name="pass"/>
+                        <div class="input-group-append">
+                            <div class="input-group-text">
+                                <span class="fas fa-lock"></span>
                             </div>
                         </div>
+                    </div>
+                    <p> @ViewBag.error</p>
                         <!-- /.col -->
-                        <div class="col-12" style="margin-top: 1rem">
+                        <div class="col-4">
                             <button type="submit" class="btn btn-primary btn-block">
-                                Đăng nhập 
+                                Đăng kí
                             </button>
                         </div>
                         <!-- /.col -->
                     </div>
                 </form>
 
-                <div class="social-auth-links text-center mb-3">
-                    <p>- Hoặc -</p>
+                <div class="social-auth-links text-center">
+                    <p>- OR -</p>
                     <a href="#" class="btn btn-block btn-primary">
-                        <i class="fab fa-facebook mr-2"></i> Đăng nhập bằng Facebook
+                        <i class="fab fa-facebook mr-2"></i>
+                        Đăng kí bằng Facebook
                     </a>
                     <a href="#" class="btn btn-block btn-danger">
-                        <i class="fab fa-google-plus mr-2"></i> Đăng nhập bằng Google+
+                        <i class="fab fa-google-plus mr-2"></i>
+                        Đăng kí Google+
                     </a>
                 </div>
-                <!-- /.social-auth-links -->
 
-                <p class="mb-1">
-                    <a href="forgot-password.html">Quên mật khẩu?</a>
-                </p>
-                <p class="mb-0">
-                    <a href="/User/Register" class="text-center">Đăng kí tài khoản mới</a>
-                </p>
+                <a href="login.html" class="text-center">Đã có tài khoản?</a>
             </div>
-            <!-- /.login-card-body -->
+            <!-- /.form-box -->
         </div>
+        <!-- /.card -->
     </div>
-    <!-- /.login-box -->
+    <!-- /.register-box -->
     <!-- jQuery -->
     <script src="/Content/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
