--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -141,7 +141,7 @@
                     sân chơi hấp dẫn dành cho bạn.
                 </p>
                 <p>
-                    <a href="#" class="btn btn-primary py-3 px-4">Tìm điểm đến</a>
+                    <a href="/Home/Destination" class="btn btn-primary py-3 px-4">Tìm điểm đến</a>
                 </p>
             </div>
             <div class="col-md-6">
@@ -267,7 +267,7 @@
             {
                 <div class="col-md-3 ftco-animate">
                     <div class="project-destination">
-                        <a href="#"
+                        <a href="/Home/Destination/@destination.DiaDiem.MaDiaDiem"
                            class="img"
                            style="background-image: url(@destination.DiaDiem.DuongDanAnh)">
                             <div class="text">
