--- a/BanVeDiTourDuLich/Views/Shared/_Layout.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="~/Content/css/icomoon.css"/>
     <link rel="stylesheet" href="~/Content/css/style.css"/>
     @* End Testing Renderer here *@
+    
+    @RenderSection("styles" , false);
 </head>
 <body>
 <nav
