--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{  DataContext _context = new DataContext();
+    NhanVien nhanvien = _context.NhanViens.Find(Session["MaTaiKhoan"]);
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -30,6 +33,7 @@
     <link rel="stylesheet" href="/Content/plugins/daterangepicker/daterangepicker.css" />
     <!-- summernote -->
     <link rel="stylesheet" href="/Content/plugins/summernote/summernote-bs4.min.css" />
+    @RenderSection("styles", required: false)
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
@@ -174,74 +178,74 @@
         </nav>
         <!-- /.navbar -->
         <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <!-- Brand Logo -->
-        <!-- Sidebar -->
-        <div class="sidebar">
-            <!-- Sidebar user panel (optional) -->
-            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                <div class="image">
-                    <img src="/Content/dist/img/user2-160x160.jpg"
-                         class="img-circle elevation-2"
-                         alt="User Image" />
-                </div>
-                <div class="info">
-                    <a href="#" class="d-block">Alexander Pierce</a>
-                </div>
-            </div>
-
-            <!-- SidebarSearch Form -->
-            <div class="form-inline">
-                <div class="input-group" data-widget="sidebar-search">
-                    <input class="form-control form-control-sidebar"
-                           type="search"
-                           placeholder="Tìm Kiếm"
-                           aria-label="Search" />
-                    <div class="input-group-append">
-                        <button class="btn btn-sidebar">
-                            <i class="fas fa-search fa-fw"></i>
-                        </button>
+        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+            <!-- Brand Logo -->
+            <!-- Sidebar -->
+            <div class="sidebar">
+                <!-- Sidebar user panel (optional) -->
+                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                    <div class="image">
+                        <img src="@nhanvien.DuongDanAnh"
+                             class="img-circle elevation-2"
+                             alt="User Image" />
+                    </div>
+                    <div class="info">
+                        <a href="#" class="d-block">@nhanvien.Ten</a>
                     </div>
                 </div>
+
+                <!-- SidebarSearch Form -->
+                <div class="form-inline">
+                    <div class="input-group" data-widget="sidebar-search">
+                        <input class="form-control form-control-sidebar"
+                               type="search"
+                               placeholder="Tìm Kiếm"
+                               aria-label="Search" />
+                        <div class="input-group-append">
+                            <button class="btn btn-sidebar">
+                                <i class="fas fa-search fa-fw"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sidebar Menu -->
+                <nav class="mt-2">
+                    <ul class="nav nav-pills nav-sidebar flex-column"
+                        data-widget="treeview"
+                        role="menu"
+                        data-accordion="false">
+                        <!-- Add icons to the links using the .nav-icon class
+                        with font-awesome or any other icon font library -->
+                        <li class="nav-item">
+                            <a id="#TongQuanLink" href="/admin/index" class="nav-link">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>Tổng quan</p>
+                            </a>
+                        </li>
+
+                        <!-- Quản lý đặt vé -->
+                        <li class="nav-item">
+                            <a id="#QuanLyVeLink" href="/admin/QuanLyBanVe" class="nav-link">
+                                <i class="nav-icon fas fa-ticket-alt"></i>
+                                <p>Quản lý bán vé</p>
+                            </a>
+                        </li>
+
+                        <!-- /. Quản lý đặt vé -->
+                        <!-- Quản lý người dùng -->
+                        <li class="nav-item">
+                            <a id="#QuanLyNguoiDungLink" href="/admin/quanlynguoidung" class="nav-link">
+                                <i class="nav-icon fas fas fa-users"></i>
+                                <p>Quản lý người dùng</p>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- /.sidebar-menu -->
             </div>
-
-            <!-- Sidebar Menu -->
-            <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column"
-                    data-widget="treeview"
-                    role="menu"
-                    data-accordion="false">
-                    <!-- Add icons to the links using the .nav-icon class
-                    with font-awesome or any other icon font library -->
-                    <li class="nav-item">
-                        <a id="#TongQuanLink" href="/admin/index" class="nav-link">
-                            <i class="nav-icon fas fa-tachometer-alt"></i>
-                            <p>Tổng quan</p>
-                        </a>
-                    </li>
-
-                    <!-- Quản lý đặt vé -->
-                    <li  class="nav-item">
-                        <a id="#QuanLyVeLink" href="/admin/QuanLyBanVe" class="nav-link">
-                            <i class="nav-icon fas fa-ticket-alt"></i>
-                            <p>Quản lý bán vé</p>
-                        </a>
-                    </li>
-
-                    <!-- /. Quản lý đặt vé -->
-                    <!-- Quản lý người dùng -->
-                    <li class="nav-item">
-                        <a id="#QuanLyNguoiDungLink" href="/admin/quanlynguoidung" class="nav-link">
-                            <i class="nav-icon fas fas fa-users"></i>
-                            <p>Quản lý người dùng</p>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <!-- /.sidebar-menu -->
-        </div>
-        <!-- /.sidebar -->
-    </aside>
+            <!-- /.sidebar -->
+        </aside>
         @RenderBody()
         <footer class="main-footer">
             <strong>Bản quyền &copy; 2014-2020 <a href="#">Vacation</a>.</strong>
@@ -283,7 +287,8 @@
     <!-- AdminLTE for demo purposes -->
     <script src="/Content/dist/js/demo.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="/Content/dist/js/pages/dashboard.js"></script>
-<script src="/Content/dist/js/AdminScript.js"></script>
+    <script src="/Content/dist/js/pages/dashboard.js"></script>
+    <script src="/Content/dist/js/AdminScript.js"></script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
