--- a/BanVeDiTourDuLich/Views/Home/Destination.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Destination.cshtml
@@ -18,7 +18,7 @@
                 <div class="col-md-3 ftco-animate">
                     <div class="project-destination">
 
-                        <a href="#" class="img" style="background-image: url(@destination.DiaDiem.DuongDanAnh);">
+                        <a href="/Home/Destination/@destination.DiaDiem.MaDiaDiem" class="img" style="background-image: url(@destination.DiaDiem.DuongDanAnh);">
                             <div class="text">
                                 <h3>@destination.DiaDiem.TenDiaDiem</h3>
                                 <span>@destination.SoChuyen Chuyến đi</span>
